# server/docs/swagger.yaml
@@ -261,7 +261,7 @@ definitions:
     type: object
   database.ProviderProfile:
     properties:
-      createdAt:
+      created_at:
         type: string
       manifest_url:
         description: url to manifest.json for stremio providers
@@ -269,9 +269,9 @@ definitions:
       name:
         description: profile name, eg. Performance, Quality, etc.
         type: string
-      provider_id:
+      provider_profile_id:
         type: integer
-      updatedAt:
+      updated_at:
         type: string
     type: object
   database.RewatchRecord:
@@ -862,6 +862,8 @@ definitions:
     type: object
   v1.LoginResponse:
     properties:
+      role:
+        type: string
       token:
         type: string
       username:
@@ -869,6 +871,8 @@ definitions:
     type: object
   v1.RegistrationResponse:
     properties:
+      role:
+        type: string
       username:
         type: string
     type: object
@@ -1947,6 +1951,10 @@ paths:
         name: id
         required: true
         type: string
+      - description: Provider Profile ID
+        in: query
+        name: provider_profile_id
+        type: integer
       produces:
       - application/json
       responses:
@@ -2062,14 +2070,14 @@ paths:
       summary: Create a provider profile
       tags:
       - Provider Profiles
-  /api/v1/provider_profiles/{providerID}:
+  /api/v1/provider_profiles/{id}:
     delete:
       consumes:
       - application/json
       parameters:
       - description: Provider ID
         in: path
-        name: providerID
+        name: id
         required: true
         type: integer
       produces:
@@ -2372,6 +2380,10 @@ paths:
         in: query
         name: episode
         required: true
+        type: integer
+      - description: Provider Profile ID
+        in: query
+        name: provider_profile_id
         type: integer
       - description: Episode Group ID
         in: query
